refactor: Facade의 getThreadList 쿼리 개선 (#20)